--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ p {
   color: rgb(85, 85, 85);
 }
 
-img {
+.img1 {
   border-radius: 50%;
   width: 400px;
   height: 400px;
@@ -61,9 +61,16 @@ a:hover {
   cursor: default;
 }
 
-section {
+section #profile {
   margin-top: -10em;
   height: 96vh;
+}
+
+#over-mij {
+  display: flex;
+  justify-content: center;
+  gap: 5rem;
+  height: 80vh;
 }
 
 #profile {
@@ -83,6 +90,13 @@ section {
 .section__text {
   align-self: center;
   text-align: center;
+  max-width: 50vw;
+}
+
+.section__text2 {
+  text-align: center;
+  max-width: 50vw;
+  margin: auto;
 }
 
 .section__text p {
@@ -91,6 +105,7 @@ section {
 
 .section__text__p1 {
   text-align: center;
+  font-size: 1.2rem;
 }
 
 .section__text__p2 {
@@ -103,14 +118,48 @@ section {
   text-align: center;
 }
 
-#socials-container {
-  display: flex;
-  justify-content: center;
-  margin-top: 1rem;
-  gap: 1rem;
-}
-
 .icon {
   cursor: pointer;
   height: 2rem;
+}
+
+.card-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.card {
+  background-color: white;
+  padding: 10px;
+  box-sizing: border-box;
+  width: 30%;
+  margin: auto;
+  border-radius: 2rem;
+  border: rgb(53, 53, 53) 0.4rem solid;
+  margin-bottom: 10em;
+}
+
+.card img {
+  width: 100%;
+  height: auto;
+  padding: 50px; /* Adjust this value to add more or less space */
+  box-sizing: border-box;
+}
+
+.projecten-titel {
+  margin-top: 3em;
+  margin-bottom: 1em;
+  font-size: 3rem;
+  text-align: center;
+}
+
+.section__text__p3 {
+  text-align: center;
+  font-size: 1.2rem;
+  margin-bottom: 1em;
+}
+
+.section__text__p4 {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
 }
